[package]
name = "rust-bitcoin-m31-acc"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
bitcoin-script = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-script" }
bitcoin = "0.32.0"
bitcoin-scriptexec = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-scriptexec", features = ["debug"] }
anyhow = "1.0.86"
rust-bitcoin-m31 = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-m31" }
stwo-prover = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/stwo", branch = "dev" }
itertools = "0.10.5"

[features]
assume-op-cat = []